--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "datatransfer-files-promise",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -15,5 +15,13 @@
     "url": "https://github.com/grabantot/datatransfer-files-promise/issues"
   },
   "homepage": "https://github.com/grabantot/datatransfer-files-promise#readme",
-  "description": ""
+  "description": "",
+  "keywords": [
+    "dataTransfer",
+    "drag-and-drop",
+    "files",
+    "propmise",
+    "input type=\"file\"",
+    "dataTransfer.items"
+  ]
 }
