--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "dataTransfer",
     "drag-and-drop",
     "files",
-    "propmise",
+    "promise",
     "input type=\"file\"",
     "dataTransfer.items"
   ],
