--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
   "name": "datatransfer-files-promise",
   "version": "1.3.1",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
-    "test": "http-server"
+    "start": "http-server",
+    "clean": "rm -rf ./dist",
+    "build": "npm run clean && tsc",
+    "prepublishOnly": "npm run build"
   },
   "author": "",
   "license": "ISC",
@@ -25,6 +28,7 @@
     "dataTransfer.items"
   ],
   "devDependencies": {
-    "http-server": "^0.11.1"
+    "http-server": "^0.11.1",
+    "typescript": "^4.6.3"
   }
 }
